# ChangeLog for net-im/qutim
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Sep 2008; Vladimir (Civil) civil.over@gmail.com +qutim-0.1.1.ebuild,
  +metadata.xml:
  New Ebuild for bug 227627. Thanks to Tommy[D] and to scarabeus for help.
