@@ -1,4 +1,4 @@
 DIST qutim_0.1.1.tar.gz 805600 RMD160 b5ee924d65a791e5af09389994cbed1e74b1a977 SHA1 984612e36854e2238115d1b4e205b6499d0f134d SHA256 db62de671d9d6d5462dc2330ba9039cc1db74169eeefad8a2d3bc5609967df3c
-EBUILD qutim-0.1.1.ebuild 967 RMD160 ffbc6dbe12f61074c49dbb0b8afed8552a7a942c SHA1 a7f37ee531198eea39a181db967fa0a2d4ff5ab6 SHA256 2c56495f251c9e75302f7db1cfebe226e3844b8cdfb1a67998814f2b00e2a57a
-MISC ChangeLog 280 RMD160 dae51aa51bc4371c0ee0d2f2aaba144e1a64ea8f SHA1 a2d9b2154bc620c730c2ad1d3c238e6e14023633 SHA256 80274a386ce6a6660dda2a989ef327fec7e5f9d546c5620830dd5b0e3339b808
+EBUILD qutim-0.1.1.ebuild 977 RMD160 e05b5c0fd88437793235f07192c5e8b054171083 SHA1 086a68254679f0b6514f1e54e5062d85f0e0531a SHA256 86d51ed0380757947b7c55a110eda80b529bbe346a17a9babde15600e1ab67f5
+MISC ChangeLog 400 RMD160 2bcb5ff03267ff1c4e8fe2641a41d1ad50f78412 SHA1 b569b3b75ab3972af98a83d2cb2629460c9e38e5 SHA256 06604c73eabbfb6376e2c2d7af8daba4df9c4b1d1eeb516f7414f423941486c0
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
