@@ -1,6 +1,10 @@
 # ChangeLog for net-im/qutim
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Jan 2009; Christian Ruppert (idl0r) <spooky85@gmail.com>
+  qutim-0.1.1.ebuild:
+  Add suggested RDEPEND=${DEPEND}.
 
   25 Sep 2008; Vladimir (Civil) civil.over@gmail.com +qutim-0.1.1.ebuild,
   +metadata.xml:
